order filed in component . now we need background service to check this action nonestop

--- a/ArsaRExCH/Components/AdminComponents/AdminInformation.razor
+++ b/ArsaRExCH/Components/AdminComponents/AdminInformation.razor
@@ -16,6 +16,10 @@
 {
     <p>@ErrorMessage</p>
 }
+
+<p>Here When admin is in this age for first init he we get option to set : 
+    1: Trading Fee =>  2: Add USdt or any other wallet  3:And pool Id we wil back on this later.
+    </p>
 @code {
     [Parameter]
     public string userId { get; set; }
