--- a/ArsaRExCH/Components/MyComponents/BitcoinUSDTTrade.razor
+++ b/ArsaRExCH/Components/MyComponents/BitcoinUSDTTrade.razor
@@ -43,7 +43,7 @@
         </table>
 
     </div>
-   
+
 </div>
 
 <div id="additional-content" style="width: 30%; height: 200px; background-color: white;float:right">
@@ -73,7 +73,7 @@
 </div>
 <div style="width:67%; display: flex; align-items: center; gap: 10px;">
     <div>
-        <h5><b>Select Order Type</b></h5>
+        <h5><b>Order Type</b></h5>
         <select @bind="selectedTradeType" class="form-select">
             <option value="Market">Market</option>
             <option value="Order">Order</option>
@@ -89,41 +89,45 @@
 </div>
 <h5><b>@tradeModel.TradePair</b></h5>
 <div style="display: flex;">
-    @if (selectedTradeType=="Market"){
-    <div style="width: 20%; margin-right: 10px;">
-        <EditForm EditContext="@editContext" OnValidSubmit="HandleValidSubmit">
-            <DataAnnotationsValidator />
-            <ValidationSummary />
-            <div class="form-group">
-                <label for="symbolI">BTC Amount</label>
-                <InputNumber id="symbolI"
-                             class="form-control"
-                             @bind-Value="tradeModel.symbolI" />
-            </div>
-            <p>Available Balance to swap : @AvailableBtcAmountToSwap</p>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </EditForm>
-    </div>
-    }else{
+    @if (selectedTradeType == "Market")
+    {
+        <div style="width: 20%; margin-right: 10px;">
+            <EditForm EditContext="@editContext" OnValidSubmit="HandleValidSubmit">
+                <DataAnnotationsValidator />
+                <ValidationSummary />
+                <div class="form-group">
+                    <label for="symbolI">BTC Amount</label>
+                    <InputNumber id="symbolI"
+                                 class="form-control"
+                                 @bind-Value="tradeModel.symbolI" />
+                </div>
+                <p>Available Balance to swap : @AvailableBtcAmountToSwap</p>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </EditForm>
+        </div>
+    }
+    else
+    {
 
-    <div style="width: 20%; margin-right: 10px;">
-        <EditForm EditContext="@editContext" OnValidSubmit="HandleValidSubmit">
-            <DataAnnotationsValidator />
-            <ValidationSummary />
-            <div class="form-group">
-                <label for="symbolI">BTC Amount</label>
-                <InputNumber id="symbolI"
-                             class="form-control"
-                             @bind-Value="tradeModel.symbolI" />
+        <div style="width: 20%; margin-right: 10px;">
+            <EditForm EditContext="@editContext" OnValidSubmit="HandleValidSubmit">
+                <DataAnnotationsValidator />
+                <ValidationSummary />
+                <div class="form-group">
+                    <label for="symbolI">BTC Amount</label>
+                    <InputNumber id="symbolI"
+                                 class="form-control"
+                                 @bind-Value="tradeModel.symbolI" />
                     <label for="symbolI">Order price</label>
                     <InputNumber id="symbolI"
                                  class="form-control"
                                  @bind-Value="tradeModel.RequestPriceFOrOrderBuy" />
-            </div>
-            <p>Available Balance to swap : @AvailableBtcAmountToSwap</p>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </EditForm>
-    </div>}
+                </div>
+                <p>Available Balance to swap : @AvailableBtcAmountToSwap</p>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </EditForm>
+        </div>
+    }
     <div style="width: 30%; background-color: white; border: 1px solid #ccc; border-radius: 5px; padding: 20px;height:200px">
         <p>BTC Price :@btcPriceVariable</p>
         <p>Last Updated: @lastUpdatedTime</p>
@@ -134,6 +138,7 @@
 </div>
 <p>@ErrorMessage</p>
 <p>@selectedTradeType</p>
+<p>@selectedBuySel</p>
 @code {
     private Trade tradeModel = new Trade();
     private EditContext editContext;
@@ -174,11 +179,32 @@
         await FetchTradesAsync();
         await CalcuateUsdtGet();
         await FetchTradesAsyncUnfinished();
-        var IsDieDone = await _tradeInterface.CheckAndFIlledOrder(ConvertStringToDouble(btcPriceVariable), tradeModel.RequestPriceFOrOrderBuy ?? 0.0);
-        if (IsDieDone)
+        //sel order
+       await FillOrderSell();
+
+    }
+    private async Task FillOrderSell()
+    {
+        if (selectedBuySel == "Sell" && selectedTradeType == "Order")
         {
-            ErrorMessage = "Order Filled";
-        };
+            // Debug output for selected values
+            Console.WriteLine($"Selected Buy/Sell: {selectedBuySel}, Selected Trade Type: {selectedTradeType}");
+
+            // Attempt to fill order
+            var isDieDone = await _tradeInterface.CheckAndFIlledOrder(ConvertStringToDouble(btcPriceVariable));
+
+            // Debugging output to check if order was filled
+            if (isDieDone)
+            {
+                ErrorMessage = "Order Filled";
+                Console.WriteLine("Order was successfully filled.");
+            }
+            else
+            {
+                ErrorMessage = "No orders filled.";
+                Console.WriteLine("No orders were filled.");
+            }
+        }
     }
 
     private async Task FetchTradesAsyncUnfinished()
@@ -187,7 +213,7 @@
         {
             var allTrades = await _tradeInterface.GetAllTrades();
             OrderTradeList = allTrades
-                    .Where(trade => trade.IsTradeDone==false && trade.IsMarketBuy==false && trade.ApplicationUserId == user2)
+                    .Where(trade => trade.IsTradeDone == false && trade.IsMarketBuy == false && trade.ApplicationUserId == user2)
                     .OrderByDescending(trade => trade.dateTime)
                     .Take(5)
                     .ToList(); StateHasChanged(); // Request a UI update
@@ -204,7 +230,7 @@
         {
             var allTrades = await _tradeInterface.GetAllTrades();
             TradeListLast50 = allTrades
-                    .Where(trade => trade.IsTradeDone )
+                    .Where(trade => trade.IsTradeDone)
                     .OrderByDescending(trade => trade.dateTime)
                     .Take(12)
                     .ToList(); StateHasChanged(); // Request a UI update
@@ -241,7 +267,7 @@
             tradeModel.TradePair = PairNames.BTCUSDT;
             AvailableBtcAmountToSwap = await _walletInterface.GetBTCBalanceOfWallet(user2);
             feeFromDbCall = await _tradeInterface.GetTradeFee();
-        //  await  FetchTradesAsyncUnfinished();
+            //  await  FetchTradesAsyncUnfinished();
         }
     }
 
@@ -263,84 +289,84 @@
         BtcToswapInclude = tradeModel.symbolI - feeFromDbCall;
     }
 
-private async Task HandleValidSubmit()
-{
-    if (tradeModel.symbolI > AvailableBtcAmountToSwap)
+    private async Task HandleValidSubmit()
     {
-        ErrorMessage = "Not Enough Balance Available";
-        return;
-    }
-
-    if (selectedTradeType == "Market")
-    {
-        var trade = new Trade
+        if (tradeModel.symbolI > AvailableBtcAmountToSwap)
         {
-            TradeId = Guid.NewGuid().ToString(),
-            TradePair = PairNames.BTCUSDT,
-            dateTime = DateTime.Now,
-            symbolI = tradeModel.symbolI,
-            SymbolII = EstimatedUsdtToGetInCludeFee,
-            TradeFee = feeFromDbCall, // TODO: edit exchange wallet
-            IsMarketBuy = true,
-            IsTradeDone = true,
-            RequestPriceFOrOrderBuy = 0,
+            ErrorMessage = "Not Enough Balance Available";
+            return;
+        }
+
+        if (selectedTradeType == "Market")
+        {
+            var trade = new Trade
+                {
+                    TradeId = Guid.NewGuid().ToString(),
+                    TradePair = PairNames.BTCUSDT,
+                    dateTime = DateTime.Now,
+                    symbolI = tradeModel.symbolI,
+                    SymbolII = EstimatedUsdtToGetInCludeFee,
+                    TradeFee = feeFromDbCall, // TODO: edit exchange wallet
+                    IsMarketBuy = true,
+                    IsTradeDone = true,
+                    RequestPriceFOrOrderBuy = 0,
                     BitcoinPriceAtTheTime = btcPriceVariable,
-            ApplicationUserId = user2,
-            BitcoinPoolId = 1 // hardcode pool - A CALL TO DB NEED
-        };
+                    ApplicationUserId = user2,
+                    BitcoinPoolId = 1 // hardcode pool - A CALL TO DB NEED
+                };
 
-        try
-        {
-            await _tradeInterface.SaveTrade(trade);
-            await _walletInterface.UpdateWalletsAfterTradeAsync(user2, tradeModel.symbolI, EstimatedUsdtToGetInCludeFee);
-            string ExchangeUserid = "be6f09d3-73c7-42a6-aec2-3b99e29ec604";
-            await _adminInterface.EditBTCWalletExchangeAmountIncrease(ExchangeUserid, feeFromDbCall);
-            ErrorMessage = "Trade added successfully!";
-            tradeModel = new Trade();
-            AvailableBtcAmountToSwap = await _walletInterface.GetBTCBalanceOfWallet(user2);
+            try
+            {
+                await _tradeInterface.SaveTrade(trade);
+                await _walletInterface.UpdateWalletsAfterTradeAsync(user2, tradeModel.symbolI, EstimatedUsdtToGetInCludeFee);
+                string ExchangeUserid = "be6f09d3-73c7-42a6-aec2-3b99e29ec604";
+                await _adminInterface.EditBTCWalletExchangeAmountIncrease(ExchangeUserid, feeFromDbCall);
+                ErrorMessage = "Trade added successfully!";
+                tradeModel = new Trade();
+                AvailableBtcAmountToSwap = await _walletInterface.GetBTCBalanceOfWallet(user2);
+            }
+            catch (Exception ex)
+            {
+                ErrorMessage = "An error occurred while saving the trade.";
+            }
         }
-        catch (Exception ex)
+        else
         {
-            ErrorMessage = "An error occurred while saving the trade.";
-        }
-    }
-    else
-    {
-        var trade = new Trade
-        {
-            TradeId = Guid.NewGuid().ToString(),
-            TradePair = PairNames.BTCUSDT,
-            dateTime = DateTime.Now,
-            symbolI = tradeModel.symbolI,
-            SymbolII = 0,
-            TradeFee = feeFromDbCall, // TODO: edit exchange wallet
-            IsMarketBuy = false,
-            IsTradeDone = false,
+            var trade = new Trade
+                {
+                    TradeId = Guid.NewGuid().ToString(),
+                    TradePair = PairNames.BTCUSDT,
+                    dateTime = DateTime.Now,
+                    symbolI = tradeModel.symbolI,
+                    SymbolII = 0,
+                    TradeFee = feeFromDbCall, // TODO: edit exchange wallet
+                    IsMarketBuy = false,
+                    IsTradeDone = false,
                     BitcoinPriceAtTheTime = btcPriceVariable,
 
                     RequestPriceFOrOrderBuy = tradeModel.RequestPriceFOrOrderBuy,
-            ApplicationUserId = user2,
-            BitcoinPoolId = 1 // hardcode pool - A CALL TO DB NEED
-        };
+                    ApplicationUserId = user2,
+                    BitcoinPoolId = 1 // hardcode pool - A CALL TO DB NEED
+                };
 
-        try
-        {
-            await _tradeInterface.SaveTrade(trade);
-            await _walletInterface.UpdateWalletsAfterTradeAsync(user2, tradeModel.symbolI, EstimatedUsdtToGetInCludeFee);
+            try
+            {
+                await _tradeInterface.SaveTrade(trade);
+                await _walletInterface.UpdateWalletsAfterTradeAsync(user2, tradeModel.symbolI, EstimatedUsdtToGetInCludeFee);
                 string ExchangeUserid = "be6f09d3-73c7-42a6-aec2-3b99e29ec604";
-            await _adminInterface.EditBTCWalletExchangeAmountIncrease(ExchangeUserid, feeFromDbCall);
-            ErrorMessage = "Trade added successfully!";
-            tradeModel = new Trade();
-            AvailableBtcAmountToSwap = await _walletInterface.GetBTCBalanceOfWallet(user2);
-        }
-        catch (Exception ex)
-        {
-            ErrorMessage = "An error occurred while saving the trade. order";
+                await _adminInterface.EditBTCWalletExchangeAmountIncrease(ExchangeUserid, feeFromDbCall);
+                ErrorMessage = "Trade added successfully!";
+                tradeModel = new Trade();
+                AvailableBtcAmountToSwap = await _walletInterface.GetBTCBalanceOfWallet(user2);
+            }
+            catch (Exception ex)
+            {
+                ErrorMessage = "An error occurred while saving the trade. order";
                 _logger.LogError(ex, "An error occurred in CheckAndFIlledOrder method while saving trade order.");
 
+            }
         }
     }
-}
 
 
     public double ConvertStringToDouble(string input)
